tests/extended_test_suite/positive/while.gp
int a = 0;
int b = 10;

while (a < b) {
    printf(a);
    a = a + 1;
} 