tests/extended_test_suite/negative/neg_binops1.gp
int a = 1;
float x = 1.0;

printf(a + x);